src/objects/QPMS__Score_Card__c.object
<CustomObject>
    <description>Score Card</description>
    <fields>
        <fullName>QPMS__Active_Suppliers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active Suppliers</description>
        <label>Active Suppliers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__All_Suppliers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All Suppliers</description>
        <label>All Suppliers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__End_Date__c</fullName>
        <description>End Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Module__c</fullName>
        <label>Module</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non_Conformance__c</fullName>
                    <label>NC</label>
                </value>
                <value>
                    <fullName>CAPA__c</fullName>
                    <label>CAPA</label>
                </value>
                <value>
                    <fullName>Audit__c</fullName>
                    <label>Audit</label>
                </value>
                <value>
                    <fullName>Observation__c</fullName>
                    <label>Observation</label>
                </value>
                <value>
                    <fullName>Inspection__c</fullName>
                    <label>Inspection</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Score_Card_Status__c</fullName>
        <description>Score Card Status</description>
        <label>Score Card Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Inprogress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Search_Modules__c</fullName>
        <description>Search Modules</description>
        <label>Search Modules</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Selected_Suppliers_Names__c</fullName>
        <description>Selected Suppliers Names</description>
        <label>Selected Suppliers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Selected_Suppliers__c</fullName>
        <description>Selected Suppliers</description>
        <label>Selected Suppliers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Start_Date__c</fullName>
        <description>Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Score Card</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Score Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Score Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>QPMS__Compare_Start_Date</fullName>
        <active>true</active>
        <description>This is used to compare start date with today.</description>
        <errorConditionFormula>QPMS__Start_Date__c &gt; TODAY()</errorConditionFormula>
        <errorMessage>Start date can not be greater than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QPMS__End_Date_Validation</fullName>
        <active>true</active>
        <description>This is used to validate end date</description>
        <errorConditionFormula>QPMS__End_Date__c &gt; TODAY()</errorConditionFormula>
        <errorMessage>End date can not be greater than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QPMS__Start_Date_Validation</fullName>
        <active>true</active>
        <description>This is used for comparing start date and end date</description>
        <errorConditionFormula>QPMS__Start_Date__c &gt; QPMS__End_Date__c</errorConditionFormula>
        <errorMessage>Start date should not be greater than End date.</errorMessage>
    </validationRules>
</CustomObject>